--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript> 
+      <h1>JavaScript is disabled</h1>
+      <p>Please enable JavaScript to view the site</p>
+    </noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
